# QPilotSync

./: .gitignore  CMakeLists.txt  PalmSync  README.md
data/: org.qpilotsync.QPilotSync.desktop
docs/: ARCHITECTURE.md  ARCHITECTURE_2026.md  ASYNC_DLP_DESIGN.md  CHALLENGES.md  CONDUIT_PLUGIN_DESIGN.md  DATA_LOSS_HANDLING.md  FIELD_MAPPING.md  GETTING_STARTED.md  KPILOT_ANALYSIS.md  PROJECT_VISION.md  ROADMAP.md  SYNC_ENGINE_ARCHITECTURE.md
exportAll/Memos/: Clinton_s_stuff.md  Download_Free_Applications.md  Four_Ways_to_Enter_Text.md  Handheld_Basics.md  Palm___iCalendar_vCard_Field_Mapping_Reference.md  Power_Tips.md
lib/: CMakeLists.txt
scripts/: build-appimage.sh  configure-pilot-link.sh
src/: CMakeLists.txt  main.cpp  profile.cpp  profile.h  qpilotsync_core.cpp  qpilotsync_version.h  settings.cpp  settings.h  settingsdialog.cpp  settingsdialog.h
src/app/: exporthandler.cpp  exporthandler.h  importhandler.cpp  importhandler.h  logwidget.cpp  logwidget.h  mainwindow.cpp  mainwindow.h
src/mappers/: calendarmapper.cpp  calendarmapper.h  contactmapper.cpp  contactmapper.h  memomapper.cpp  memomapper.h  todomapper.cpp  todomapper.h
src/palm/: categoryinfo.cpp  categoryinfo.h  devicesession.cpp  devicesession.h  deviceworker.cpp  deviceworker.h  kpilotdevicelink.cpp  kpilotdevicelink.h  kpilotlink.cpp  kpilotlink.h  pilotrecord.cpp  pilotrecord.h  tickleworker.cpp  tickleworker.h
src/sync/: conduit.cpp  conduit.h  localfilebackend.cpp  localfilebackend.h  syncbackend.h  syncengine.cpp  syncengine.h  syncstate.cpp  syncstate.h  synctypes.h
src/sync/conduits/: calendarconduit.cpp  calendarconduit.h  contactconduit.cpp  contactconduit.h  installconduit.cpp  installconduit.h  memoconduit.cpp  memoconduit.h  todoconduit.cpp  todoconduit.h  webcalendarconduit.cpp  webcalendarconduit.h
tests/: CMakeLists.txt  test_calendarmapper.cpp  test_categoryinfo.cpp  test_contactmapper.cpp  test_localfilebackend.cpp  test_memomapper.cpp  test_profile.cpp  test_syncengine.cpp  test_syncstate.cpp  test_todomapper.cpp
